--- a/Lesson-1/index.html
+++ b/Lesson-1/index.html
@@ -1,11 +1,112 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lesson 1</title>
   </head>
   <body>
-    <h1></h1>
+    <!-- Рецепт 1 -->
+    <div>
+      <h4>Торт "Наполеон"</h4>
+
+      <p>
+        11 страниц, выданных мне сайтом по запросу "торт "Наполеон"", честно и
+        очень внимательно изучены и теперь я с чистой и спокойной совестью могу
+        разместить мой вариант. В качестве рекламы моего рецепта могу сказать
+        следующее: когда муж моей подруги, капитан рыболовного судна,
+        возвращался после 4 -6 месяцев отсутствия домой, он звонил из Норвегии
+        или уже из Мурманска и просил меня испечь для него этот торт. И я пекла.
+        Оля рассказывает, что огромный торт он съедал один, никому не давал ни
+        кусочка... говорил: "Это МОЙ торт! Он ДЛЯ МЕНЯ сделан!" И все. Рецепт
+        очень-очень старый, родом с Украины. Ингредиентов - самый минимум!!!
+        Результат просто превосходный!
+      </p>
+    </div>
+    <div>
+      <h4>Ингредиенты для «Торт "Наполеон"»:</h4>
+      <dl>
+        <dt>Для теста:</dt>
+        <dd>Молоко — 1 стак.</dd>
+        <dd>Мука пшеничная / Мука — 5 стак.</dd>
+        <dd>
+          Маргарин (можно сливочное масло, но я делаю на хорошем маргарине)—400г
+        </dd>
+      </dl>
+      <dl>
+        <dt>Для крема 1</dt>
+        <dd>Сахар (по вкусу) — 1...2 стак.</dd>
+        <dd>Масло сливочное — 250 г</dd>
+      </dl>
+      <dl>
+        <dt>Для крема 2</dt>
+        <dd>Желток яичный — 3 шт</dd>
+        <dd>Сахар — 0,5 стак.</dd>
+        <dd>Молоко — 2 стак.</dd>
+        <dd>Мука пшеничная / Мука (с небольшой горкой) — 3 ст. л.</dd>
+      </dl>
+      <dl>
+        <dt>Пищевая и энергетическая ценность:</dt>
+        <dt>Готового блюда</dt>
+        <dd>| ккал | белки | жиры | углеводы |</dd>
+        <dd>| 8266.8 | 118.7г | 484.7г | 938.2г |</dd>
+      </dl>
+      <dl>
+        <dd>100 г блюда</dd>
+        <dd>| ккал | белки | жиры | углеводы |</dd>
+        <dd>| 316.7 | 4.5г | 18.6г | 35.9 г |</dd>
+      </dl>
+    </div>
+    <div>
+      <h4>Торт "Птичье молоко"</h4>
+      <p>
+        Торт "Птичье молоко" был изобретен одним московским кулинаром и на это
+        изобретение, кстати, автором был получен патент. Продавали его в Москве
+        на Арбате в кондитерской от ресторана "Прага". Когда его выносили, а это
+        случалось да-а-а-леко не каждый день, очередь выстраивалась, почти как в
+        Мавзолей. Хватали по 3 -5 штук, чтобы и друзьям, и знакомым.
+        Предлагаемый рецепт максимально приближен к оригиналу, насколько это
+        возможно в домашних условиях. Торт получается БЕСПОДОБНО вкусным. На
+        днях я делала его на мужнин юбилей, на его работу. Народ был в шоке и в
+        восторге. Помощница мужа сказала, что торт произвел фурор!
+      </p>
+    </div>
+    <div>
+      <h4>Ингредиенты для «Торт "Птичье молоко"»:</h4>
+      <dl>
+        <dt>Для теста:</dt>
+        <dd>Мука пшеничная / Мука — 1 стак.</dd>
+        <dd>Сахар — 1 стак.</dd>
+        <dd>Яйцо куриное — 4 шт</dd>
+      </dl>
+      <dl>
+        <dt>Для крема</dt>
+        <dd>Желатин — 40 г</dd>
+        <dd>Молоко — 1 стак.</dd>
+        <dd>Масло сливочное — 300 г</dd>
+        <dd>Ванильный сахар — 1 пакет.</dd>
+        <dd>Вода (кипяченая теплая, для желатина) — 150 мл</dd>
+        <dd>Мука пшеничная / Мука — 1 ст. л.</dd>
+        <dd>Сахар — 2 стак.</dd>
+        <dd>Яйцо куриное — 10 шт</dd>
+      </dl>
+      <dl>
+        <dt>Для глазури</dt>
+        <dd>Какао-порошок — 5 ст. л.</dd>
+        <dd>Сахар — 1/2 стак.</dd>
+        <dd>Молоко — 3 ст. л.</dd>
+        <dd>Масло сливочное — 50 г</dd>
+      </dl>
+      <dl>
+        <dt>Пищевая и энергетическая ценность:</dt>
+        <dt>Готового блюда</dt>
+        <dd>| ккал | белки | жиры | углеводы |</dd>
+        <dd>| 8758.9 | 191.9 | 396.4 | 1106.2 |</dd>
+      </dl>
+      <dt>100 г блюда</dt>
+      <dd>| ккал | белки | жиры | углеводы |</dd>
+      <dd>| 308.4 | 6.8 | 14 | 39 |</dd>
+    </dl>
+    </div>
   </body>
 </html>
